# plan-execute-langgraph

./: .env.example  .gitignore  DSPY_MIGRATION_SUMMARY.md  Dockerfile  FRONTEND_BACKEND_INTEGRATION.md  INTEGRATION_SUMMARY.md  README.md  README_MCP_INTEGRATION.md  README_SIMPLE_AGENT.md  SIMPLE_CHAT_MCP_README.md  TRAE.md  agent.py  app.py  client.py  compose.yaml  config.py  demo_mcp_airline.py  example_prompt_langfuse.py  explore.ipynb  main.py  mcp_server.py  pyproject.toml  service.py  test_canvas.py  test_dspy_capabilities.py  test_dspy_exploration.py  test_dspy_integration_complete.py  test_dspy_mcp_integration.py  test_dspy_service.py  test_dspy_streaming_debug.py  test_dspy_streaming_focused.py  test_frontend_browser.js  test_frontend_integration.py  test_full_integration.py  test_setup_checkpointer.py  test_simple_agent.py  test_simple_chat_mcp.py  test_simple_chat_stream.py  unit.py  verify_setup.py
frontend/: index.html  package-lock.json  package.json  types.ts  vite.config.ts
frontend/app/: assistant.tsx  layout.tsx  runtime-provider.tsx
frontend/components/: app-sidebar.tsx
frontend/contexts/: canvas-context.tsx
frontend/src/: App.tsx  index.css
init-db/: init-db.sql
tests/: client.py  demo_mcp_airline.py  test_mcp_async_fix.py  test_mcp_integration.py  test_simple_chat_mcp.py  unit.py
trajectories/: trajectory_20250812_181401.json  trajectory_20250813_155525.json  trajectory_20250813_155704.json  trajectory_20250813_155830.json  trajectory_20250813_155944.json  trajectory_20250815_040937.json  trajectory_20250819_111418.json
(+24 files in other folders)
